<resources>
    <string name="app_name">Texas Holdem</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_date_of_birth">Date of birth (yyyy-MM-dd)</string>
    <string name="prompt_date_of_birth_auto_fill">Date of birth</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_quit">Quit</string>
    <string name="welcome">"Welcome %s!"</string>
    <string name="signing_in">"We are signing you in"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_birth_date">Not a valid birth date</string>
    <string name="invalid_nickname">Not a valid nickname</string>
    <string name="sign_in_failed">"Sign in failed"</string>
    <string name="sign_up_failed">"Sign up failed"</string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Texas Holdem Poker</string>
    <string name="nav_header_user">%s (%s)</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_game">Game (Running)</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="amount_of_chips">Enter amount of chips to purchase:</string>
    <string name="amount">Amount</string>

    <!-- Home fragment -->
    <string name="play_against_bots">Play against bots</string>
    <string name="play_on_network">Play on network</string>

    <!-- About fragment. The &#160; is used as space. Otherwise whitespace characters are trimmed -->
    <string name="by_haim_adrian">By Haim Adrian</string>
    <string name="about_content">This application has been developed as a final project of Android1 course.\nTeacher:\u0009\u0009Efi Profus the King\nStudent:\u0009\u0009Haim Adrian the Carpenter\nCollege:\u0009\u0009\u0009Holon Institute of Technology\nVersion:\u0009\u0009\u00091.0.0</string>
    <string name="texas_holdem_poker">Texas Holdem Poker</string>

    <!-- Play against AI -->
    <string name="amount_of_bots">Amount of bots</string>
    <string name="amount_of_coins">Amount of chips</string>
    <string name="size_of_small_bet">Small bet</string>
    <string name="size_of_big_bet">Big bet</string>
    <string name="help">Help</string>
    <string name="play">PLAY</string>
    <string name="go">GO</string>

    <!-- Play on Network -->
    <string name="create_new_game">Create New Game</string>
    <string name="join_game">Join Game</string>
    <string name="game_hash">Game Identifier (hash)</string>
    <string name="join">JOIN</string>
    <string name="create">CREATE</string>
    <string name="turn_timeout">Turn timeout (seconds)</string>
    <string name="default_timeout">60</string>

    <!-- Game -->
    <string name="action_start">START</string>
    <string name="action_call">CALL</string>
    <string name="action_check">CHECK</string>
    <string name="action_fold">FOLD</string>
    <string name="action_raise">RAISE</string>
    <string name="quit">QUIT</string>
    <string name="chat">CHAT</string>
    <string name="log">LOG</string>
    <string name="player_name">Player</string>
    <string name="zero">0</string>
    <string name="game_id">Game ID: %s</string>
    <string name="raise_with">Raise with:</string>

    <!-- Chat -->
    <string name="write_something">Write something…</string>
    <string name="participants">Participants: %d</string>
</resources>