<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/navigationGroup"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_24"
            android:title="@string/menu_about" />
    </group>
    <group
        android:id="@+id/systemGroup"
        android:checkableBehavior="single"
        android:menuCategory="system">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/logout_24"
            android:title="@string/menu_sign_out" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/close_24"
            android:title="@string/action_quit" />
    </group>
</menu>