<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_check"
        android:orderInCategory="100"
        android:title="@string/action_check"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="101"
        android:title="@string/action_call"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_raise"
        android:orderInCategory="102"
        android:title="@string/action_raise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fold"
        android:orderInCategory="103"
        android:title="@string/action_fold"
        app:showAsAction="never" />
</menu>