<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ai"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.fragment.home.PlayAiFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.97"
            android:background="@drawable/group_box"
            android:orientation="vertical">

            <org.hit.android.haim.texasholdem.view.custom.EditTextGuidedView
                android:id="@+id/editTextPlayersCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:guide="Enter how many bots you want to play with"
                app:hint="@string/amount_of_bots"
                app:inputType="numberSigned" />

            <org.hit.android.haim.texasholdem.view.custom.EditTextGuidedView
                android:id="@+id/editTextCoinsCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:guide="Enter how many coins you want to start with"
                app:hint="@string/amount_of_coins"
                app:inputType="numberSigned" />

            <org.hit.android.haim.texasholdem.view.custom.EditTextGuidedView
                android:id="@+id/editTextSmallBet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:guide="Enter the value that will be used as small bet"
                app:hint="@string/size_of_small_bet"
                app:inputType="numberSigned" />

            <org.hit.android.haim.texasholdem.view.custom.EditTextGuidedView
                android:id="@+id/editTextBigBet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:guide="Enter the value that will be used as big bet"
                app:hint="@string/size_of_big_bet"
                app:inputType="numberSigned" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPlayNetwork"
            style="@style/ButtonBlueStyle"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go" />
    </LinearLayout>

</LinearLayout>