<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- The fragments that we navigate to using the navigation view -->
    <fragment
        android:id="@+id/nav_home"
        android:name="org.hit.android.haim.texasholdem.view.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="org.hit.android.haim.texasholdem.view.fragment.PreferencesFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/nav_about"
        android:name="org.hit.android.haim.texasholdem.view.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <!-- The fragments that we navigate to programmatically. (When user clicks the buttons within the fragments above) See MainActivity.navigateToFragment -->
    <fragment
        android:id="@+id/nav_play_pc"
        android:name="org.hit.android.haim.texasholdem.view.fragment.home.PlayPcFragment"
        tools:layout="@layout/fragment_play_pc" />

    <fragment
        android:id="@+id/nav_play_network"
        android:name="org.hit.android.haim.texasholdem.view.fragment.home.PlayNetworkFragment"
        tools:layout="@layout/fragment_play_network" />
</navigation>