<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <FrameLayout
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/playerImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="60"
            android:progress="60"
            android:progressDrawable="@drawable/circular_progress_bar" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="1dp"
            android:text="@string/player_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playerCoinsIcon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/nav_header_desc"
                android:gravity="center_vertical"
                app:srcCompat="@drawable/chips" />

            <TextView
                android:id="@+id/playerCoinsTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</merge>