<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".view.fragment.AbstractSignInFragment">

    <EditText
        android:id="@+id/topEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/prompt_username"
        android:backgroundTint="@android:color/holo_green_dark"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/bottomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/prompt_password"
        android:backgroundTint="@android:color/holo_green_dark"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/navigationLink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="86dp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="#1565C0"
            android:textSize="24sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/workProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>